# pipe-c

./: .gitignore  CMakeLists.txt  README.md  exe  package.h  ring.c  station  tst_redirect.c
directory/: out
include/: package.h
src/: ring.c  station.c  tst_pipes.c  tst_redirect.c
